wger/Deployment-wger-celery-beat.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: wger
  name: wger-celery-beat
  namespace: business
spec:
  minReadySeconds: 10
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      name: wger-celery-beat
  template:
    metadata:
      annotations:
        reloader.stakater.com/auto: "true"
      labels:
        name: wger-celery-beat
    spec:
      containers:
      - command:
        - /start-beat
        image: docker.io/wger/server:2.7
        imagePullPolicy: IfNotPresent
        name: celery-beat
        volumeMounts:
        - mountPath: /home/wger/beat
          name: beat
      enableServiceLinks: false
      volumes:
      - hostPath:
          path: /data/wger/celery-beat
        name: beat
