wger/Deployment-wger-celery-worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: wger
  name: wger-celery-worker
  namespace: business
spec:
  minReadySeconds: 10
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      name: wger-celery-worker
  template:
    metadata:
      annotations:
        reloader.stakater.com/auto: "true"
      labels:
        name: wger-celery-worker
    spec:
      containers:
      - command:
        - /start-worker
        image: docker.io/wger/server:2.7
        imagePullPolicy: IfNotPresent
        name: celery-worker
        volumeMounts:
        - mountPath: /home/wger/media
          name: media
      enableServiceLinks: false
      volumes:
      - hostPath:
          path: /cold-data/wger/media
        name: media
