wger/Deployment-wger.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: wger
  name: wger
  namespace: business
spec:
  minReadySeconds: 10
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      name: wger
  template:
    metadata:
      annotations:
        reloader.stakater.com/auto: "true"
      labels:
        name: wger
    spec:
      containers:
      - image: docker.io/nginx:1.31.6-alpine
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /
            port: 80
            scheme: HTTP
          initialDelaySeconds: 15
          periodSeconds: 30
          timeoutSeconds: 5
        name: nginx
        ports:
        - containerPort: 80
          name: http
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /
            port: 80
            scheme: HTTP
          initialDelaySeconds: 5
          periodSeconds: 10
          timeoutSeconds: 5
        volumeMounts:
        - mountPath: /etc/nginx/conf.d/default.conf
          name: wger-nginx-conf
          readOnly: true
          subPath: default.conf
        - mountPath: /wger/static
          name: static
          readOnly: true
        - mountPath: /wger/media
          name: media
          readOnly: true
      - env:
        - name: ALLOW_GUEST_USERS
          valueFrom:
            configMapKeyRef:
              key: ALLOW_GUEST_USERS
              name: wger-config-env
        - name: ALLOW_REGISTRATION
          valueFrom:
            configMapKeyRef:
              key: ALLOW_REGISTRATION
              name: wger-config-env
        - name: AUTH_PROXY_CREATE_UNKNOWN_USER
          valueFrom:
            configMapKeyRef:
              key: AUTH_PROXY_CREATE_UNKNOWN_USER
              name: wger-config-env
        - name: AUTH_PROXY_HEADER
          valueFrom:
            configMapKeyRef:
              key: AUTH_PROXY_HEADER
              name: wger-config-env
        - name: AUTH_PROXY_TRUSTED_IPS
          valueFrom:
            configMapKeyRef:
              key: AUTH_PROXY_TRUSTED_IPS
              name: wger-config-env
        - name: AUTH_PROXY_USER_EMAIL_HEADER
          valueFrom:
            configMapKeyRef:
              key: AUTH_PROXY_USER_EMAIL_HEADER
              name: wger-config-env
        - name: AUTH_PROXY_USER_NAME_HEADER
          valueFrom:
            configMapKeyRef:
              key: AUTH_PROXY_USER_NAME_HEADER
              name: wger-config-env
        - name: CACHE_API_EXERCISES_CELERY
          valueFrom:
            configMapKeyRef:
              key: CACHE_API_EXERCISES_CELERY
              name: wger-config-env
        - name: CELERY_BACKEND
          valueFrom:
            configMapKeyRef:
              key: CELERY_BACKEND
              name: wger-config-env
        - name: CELERY_BROKER
          valueFrom:
            configMapKeyRef:
              key: CELERY_BROKER
              name: wger-config-env
        - name: CELERY_WORKER_CONCURRENCY
          valueFrom:
            configMapKeyRef:
              key: CELERY_WORKER_CONCURRENCY
              name: wger-config-env
        - name: CSRF_TRUSTED_ORIGINS
          valueFrom:
            configMapKeyRef:
              key: CSRF_TRUSTED_ORIGINS
              name: wger-config-env
        - name: DJANGO_CACHE_BACKEND
          valueFrom:
            configMapKeyRef:
              key: DJANGO_CACHE_BACKEND
              name: wger-config-env
        - name: DJANGO_CACHE_CLIENT_CLASS
          valueFrom:
            configMapKeyRef:
              key: DJANGO_CACHE_CLIENT_CLASS
              name: wger-config-env
        - name: DJANGO_CACHE_LOCATION
          valueFrom:
            configMapKeyRef:
              key: DJANGO_CACHE_LOCATION
              name: wger-config-env
        - name: DJANGO_COLLECTSTATIC_ON_STARTUP
          valueFrom:
            configMapKeyRef:
              key: DJANGO_COLLECTSTATIC_ON_STARTUP
              name: wger-config-env
        - name: DJANGO_DB_DATABASE
          valueFrom:
            configMapKeyRef:
              key: DJANGO_DB_DATABASE
              name: wger-config-env
        - name: DJANGO_DB_ENGINE
          valueFrom:
            configMapKeyRef:
              key: DJANGO_DB_ENGINE
              name: wger-config-env
        - name: DJANGO_DB_HOST
          valueFrom:
            configMapKeyRef:
              key: DJANGO_DB_HOST
              name: wger-config-env
        - name: DJANGO_DB_PORT
          valueFrom:
            configMapKeyRef:
              key: DJANGO_DB_PORT
              name: wger-config-env
        - name: DJANGO_DB_USER
          valueFrom:
            configMapKeyRef:
              key: DJANGO_DB_USER
              name: wger-config-env
        - name: DJANGO_DEBUG
          valueFrom:
            configMapKeyRef:
              key: DJANGO_DEBUG
              name: wger-config-env
        - name: DJANGO_PERFORM_MIGRATIONS
          valueFrom:
            configMapKeyRef:
              key: DJANGO_PERFORM_MIGRATIONS
              name: wger-config-env
        - name: EMAIL_HOST
          valueFrom:
            configMapKeyRef:
              key: EMAIL_HOST
              name: wger-config-env
        - name: EMAIL_HOST_PASSWORD
          valueFrom:
            configMapKeyRef:
              key: EMAIL_HOST_PASSWORD
              name: wger-config-env
        - name: EMAIL_HOST_USER
          valueFrom:
            configMapKeyRef:
              key: EMAIL_HOST_USER
              name: wger-config-env
        - name: EMAIL_PORT
          valueFrom:
            configMapKeyRef:
              key: EMAIL_PORT
              name: wger-config-env
        - name: EMAIL_USE_TLS
          valueFrom:
            configMapKeyRef:
              key: EMAIL_USE_TLS
              name: wger-config-env
        - name: ENABLE_EMAIL
          valueFrom:
            configMapKeyRef:
              key: ENABLE_EMAIL
              name: wger-config-env
        - name: EXPOSE_PROMETHEUS_METRICS
          valueFrom:
            configMapKeyRef:
              key: EXPOSE_PROMETHEUS_METRICS
              name: wger-config-env
        - name: FROM_EMAIL
          valueFrom:
            configMapKeyRef:
              key: FROM_EMAIL
              name: wger-config-env
        - name: NUMBER_OF_PROXIES
          valueFrom:
            configMapKeyRef:
              key: NUMBER_OF_PROXIES
              name: wger-config-env
        - name: SITE_URL
          valueFrom:
            configMapKeyRef:
              key: SITE_URL
              name: wger-config-env
        - name: SYNC_EXERCISES_CELERY
          valueFrom:
            configMapKeyRef:
              key: SYNC_EXERCISES_CELERY
              name: wger-config-env
        - name: SYNC_EXERCISE_IMAGES_CELERY
          valueFrom:
            configMapKeyRef:
              key: SYNC_EXERCISE_IMAGES_CELERY
              name: wger-config-env
        - name: SYNC_EXERCISE_VIDEOS_CELERY
          valueFrom:
            configMapKeyRef:
              key: SYNC_EXERCISE_VIDEOS_CELERY
              name: wger-config-env
        - name: SYNC_INGREDIENTS_CELERY
          valueFrom:
            configMapKeyRef:
              key: SYNC_INGREDIENTS_CELERY
              name: wger-config-env
        - name: TIME_ZONE
          valueFrom:
            configMapKeyRef:
              key: TIME_ZONE
              name: wger-config-env
        - name: TZ
          valueFrom:
            configMapKeyRef:
              key: TZ
              name: wger-config-env
        - name: USE_CELERY
          valueFrom:
            configMapKeyRef:
              key: USE_CELERY
              name: wger-config-env
        - name: WGER_INSTANCE
          valueFrom:
            configMapKeyRef:
              key: WGER_INSTANCE
              name: wger-config-env
        - name: WGER_USE_GUNICORN
          valueFrom:
            configMapKeyRef:
              key: WGER_USE_GUNICORN
              name: wger-config-env
        - name: X_FORWARDED_PROTO_HEADER_SET
          valueFrom:
            configMapKeyRef:
              key: X_FORWARDED_PROTO_HEADER_SET
              name: wger-config-env
        - name: SECRET_KEY
          valueFrom:
            secretKeyRef:
              key: SECRET_KEY
              name: wger-sealed-secret
        - name: SIGNING_KEY
          valueFrom:
            secretKeyRef:
              key: SIGNING_KEY
              name: wger-sealed-secret
        - name: DJANGO_DB_PASSWORD
          valueFrom:
            secretKeyRef:
              key: DJANGO_DB_PASSWORD
              name: wger-shared-sealed-secret
        image: docker.io/wger/server:2.7
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /api/v2/version/
            port: 8000
            scheme: HTTP
          initialDelaySeconds: 15
          periodSeconds: 30
          timeoutSeconds: 5
        name: wger
        ports:
        - containerPort: 8000
          name: gunicorn
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /api/v2/version/
            port: 8000
            scheme: HTTP
          initialDelaySeconds: 5
          periodSeconds: 10
          timeoutSeconds: 5
        startupProbe:
          failureThreshold: 30
          httpGet:
            path: /api/v2/version/
            port: 8000
            scheme: HTTP
          periodSeconds: 10
          timeoutSeconds: 5
        volumeMounts:
        - mountPath: /home/wger/static
          name: static
        - mountPath: /home/wger/media
          name: media
      enableServiceLinks: false
      volumes:
      - emptyDir: {}
        name: static
      - hostPath:
          path: /cold-data/wger/media
        name: media
      - configMap:
          name: wger-nginx-conf
        name: wger-nginx-conf
