wger/IngressRoute-wger-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  labels:
    app: wger
  name: wger-ingressroute
  namespace: business
spec:
  entryPoints:
  - websecure
  routes:
  - kind: Rule
    match: Host(`gym.danielramos.me`)
    middlewares:
    - name: authelia-forwardauth
      namespace: auth
    services:
    - name: wger
      port: 80
  tls:
    store:
      name: default
